--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -29,6 +29,10 @@
          <ui:include src="/includes/menu.xhtml"/>
      </ui:define>
 
+    <ui:define name="top-menu">
+        <ui:include src="/includes/top-bar.xhtml"/>
+    </ui:define>
+
     <ui:define name="footer">
         Copyright (C) 2018 - Schifers
 
