--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -5,12 +5,20 @@
 
      <ul class="sidebar-menu">
      	<ui:repeat var="item" value="#{menuBean.menuPrincipal}">
-	        <li>
-	            <p:link href="#{item.url}">
+			<h:panelGroup rendered="#{item.type == 'ITEM'}">
+		        <li>
+		            <p:link href="#{item.url}">
+		            	<i class="#{item.icon}"></i>
+		                <span>#{item.name}</span>
+		            </p:link>
+		        </li>
+	        </h:panelGroup>
+			<h:panelGroup rendered="#{item.type == 'LIST'}">
+		        <li class="header">
 	            	<i class="#{item.icon}"></i>
 	                <span>#{item.name}</span>
-	            </p:link>
-	        </li>
+		        </li>
+	        </h:panelGroup>
 		</ui:repeat>        
     </ul>
 
